--- a/06-DAO-Exercises/dao_exercises.test/dao_exercises.test.csproj
+++ b/06-DAO-Exercises/dao_exercises.test/dao_exercises.test.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\dao-exercises\dao-exercises.csproj" />
+  </ItemGroup>
+
 </Project>
